sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:10: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                     ^AlgCocktailSort1:10: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                       ^AlgCocktailSort1:10: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                                      ^AlgCocktailSort1:10: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                                        ^AlgCocktailSort1:16: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                     ^AlgCocktailSort1:16: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                       ^AlgCocktailSort1:16: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                                      ^AlgCocktailSort1:16: error: not found: value x
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
                                        ^AlgCocktailSort1:20: error: not found: value aMixé
  } while (aMixé)
           ^