sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  do {
    
    var aMixé = false
    
    for (i <- 0 to getNombreValeurs()-2) {
      
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
      
    }
    
    for (i <- getNombreValeurs()-2 to 0 by -1) {
      
      if (!plusPetit(x,x+1)) {echange(x,x+1);aMixé = true}
      
    }
    
  } while (aMixé)
  
}